src/test/ui/suggestions/suggest-on-bare-closure-call.rs
fn main() {
    let _ = ||{}();
    //~^ ERROR expected function, found `()`
}
